# technical_case_delfos

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.dagster  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.tmp_dagster_home_1dm88uoy/history/: runs.db
.tmp_dagster_home_1dm88uoy/history/runs/: .db  index.db
.tmp_dagster_home_1dm88uoy/schedules/: schedules.db
src/api/: database.py  limiter.py  logging_config.py  main.py  routers.py  schemas.py
src/dagster/: assets.py  definitions.py  resources.py
src/db/models/: alvo.py  fonte.py
src/db/repositories/: alvo_repository.py  fonte_repository.py
src/etl/: process.py
src/models/: alvo.py  fonte.py  schemas.py
src/orchestration/: assets.py  definitions.py  resources.py
src/repositories/: alvo_repository.py  fonte_repository.py
src/scripts/: init_databases.py  populate_fonte_db.py
tests/: test_api.py  test_etl.py
